samples/_failures_safe/1761358966_ae4084_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc536c47.c: In function ‘main’:
./samples/SAFE/__tmp_cc536c47.c:155:25: error: expected ‘)’ at end of input
  155 |     if (fgets(input_text
      |              ~          ^
      |                         )
./samples/SAFE/__tmp_cc536c47.c:155:9: error: too few arguments to function ‘fgets’
  155 |     if (fgets(input_text
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_cc536c47.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_cc536c47.c:155:5: error: expected declaration or statement at end of input
  155 |     if (fgets(input_text
      |     ^~
